TEST_PROGRAMS/VALID/05/crazy_multi-line_comment.go
/* A crazy multi-line comment. */

package main

var x int

/* *** This //* is a *** crazy
 *
 * multi-line
 * /* /* /* comment /////.
 */

func main() {
	// Do nothing
}
