TEST_PROGRAMS/INVALID/05/missing_var_type.go
/* Missing var type. */

package main

var x // Error: Missing type for non-initialized var declaration.

func main() {
	// Do nothing
}
